Changed collapse positioning to fixed
This works better with the new scroll locking functions we're using.

--- a/css/admin.less
+++ b/css/admin.less
@@ -1816,8 +1816,8 @@
 	}
 
 	.live-editor-collapse {
-		position: absolute;
-		top: 24px;
+		position: fixed;
+		top: 18px;
 		left: 10px;
 		line-height: 1em;
 		cursor: pointer;
